--- a/style.css
+++ b/style.css
@@ -14,9 +14,20 @@
     display: flex;
     flex-direction: row;
 }
-.dado{
- background-color: aquamarine;
+img{
  width: 200px;
  height: 200px;
  margin: 40px;
+ border-radius: 30px;
+}
+.risultati{
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 20px 0;
+}
+button{
+    font-size: 1.5rem;
+    padding: 0px 10px;
+    border-radius: 30px;
+    background-color: rgb(158, 0, 0);
 }
