--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    background-color: rgb(80, 80, 80);
 }
 .d-flex{
     display: flex;
@@ -14,11 +15,15 @@
     display: flex;
     flex-direction: row;
 }
+.d-flex-row p{
+ text-align: center;
+ margin-top: 20px;
+}
 img{
- width: 200px;
- height: 200px;
- margin: 40px;
- border-radius: 30px;
+    width: 200px;
+    height: 200px;
+    margin: 40px;
+    border-radius: 30px;
 }
 .risultati{
     font-size: 2rem;
@@ -26,6 +31,8 @@ img{
     margin: 20px 0;
 }
 button{
+    position: absolute;
+    top: 500px;
     font-size: 1.5rem;
     padding: 0px 10px;
     border-radius: 30px;
